<resources>
    <string name="app_name">Museum Funds</string>
    <string name="add_new_exhibit">Add New Exhibit</string>
    <string name="exhibit_name">Exhibit Name</string>
    <string name="exhibit_creation_year">Creation Year</string>
    <string name="exhibit_author">Author</string>
    <string name="fund_catalog">Fund Catalog</string>
    <string name="exhibit_exhibitions">Exhibitions</string>
    <string name="reset_btn">Reset</string>
    <string name="submit_btn">Submit</string>
    <string name="add_new_exhibition">Add New Exhibition</string>
    <string name="exhibition_duration">Duration</string>
    <string name="exhibition_organiser">Organiser</string>
    <string name="exhibition_exhibits">Exhibits</string>
    <string name="name">Name</string>
    <string name="author_dob">DOB</string>
    <string name="author_country">Country</string>
    <string name="organiser_address">Address</string>
    <string name="organiser_number">Number</string>
    <string name="fund">Fund</string>
    <string name="add_new_fund">Add New Fund</string>
    <string name="fund_name">Fund Name</string>
    <string name="fund_description">Description</string>
    <string name="exhibitions">here will be displayed the exhibitions</string>
    <string name="exhibits">here will be displayed the exhibits</string>
    <string name="author_name">Author Name</string>
    <string name="author_country_full">Author Country</string>
    <string name="author_dob_full">Author DOB</string>
    <string name="fund_description_full">Fund Description</string>
    <string name="exhibition_start">Start Date</string>
    <string name="exhibition_end">End Date</string>
    <string name="organiser_name">Organiser Name</string>
    <string name="organiser_address_full">Organiser Address</string>
    <string name="organiser_number_full">Phone Number</string>
</resources>
